Добавлен эндпоинт для смены пароля
