# src/controllers/auth.controller.ts
@@ -1,8 +1,10 @@
 import type { Request, Response } from 'express'
 
-import { loginResponseSchema, type LoginRequestType, type RegisterRequestType } from '../schemas/auth.schemas.js'
+import { loginResponseSchema } from '../schemas/auth.schemas.js'
+import type { ChangePasswordRequestType, LoginRequestType, RegisterRequestType } from '../schemas/auth.schemas.js'
 import { AuthService } from '../services/auth.service.js'
 import { userReadSchema } from '../schemas/user.schemas.js'
+import type { AuthRequest } from '../middlewares/auth.middleware.js'
 
 
 export class AuthController {
@@ -23,6 +25,21 @@ export class AuthController {
             const loginRequestData: LoginRequestType = req.body
             const result = await AuthService.login(loginRequestData);
             res.status(200).json(loginResponseSchema.parse(result))
+        } catch (error: any) {
+            res.status(400).json({
+                message: error.message,
+            });
+        }
+    }
+
+    static async changePassword(req: AuthRequest, res: Response) {
+        try {
+            const { oldPassword, newPassword }: ChangePasswordRequestType = req.body;
+            const userId = req.userId!;
+            await AuthService.changePassword(userId, oldPassword, newPassword);
+            res.status(200).json({
+                message: "Пароль успешно изменён"
+            })
         } catch (error: any) {
             res.status(400).json({
                 message: error.message,
